[package]
name = "spatial_annotation_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.103"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }